--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -189,6 +189,7 @@ color:white;
     justify-content: space-between;
     background-color: #FFF;
     border-radius: 50%;
+    margin-top: 3px;
 }
 
 .qty-count-btn{
@@ -204,6 +205,18 @@ color:white;
     font-size: 30px;
     cursor: pointer;
     /* display: none; */
+}
+
+.remove-btn{
+    color: #EC5A5A;
+    font-size: 13px;
+    cursor: pointer;
+    font-weight: 600;
+    margin-top: 3px;
+}
+
+.remove-btn:hover{
+    text-decoration: underline;
 }
 
 .products{
