--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,7 +1,7 @@
 <div class="side-bar">
     <a href="menu" class="menu-tab"><div class="section"><ion-icon name="grid-outline"></ion-icon></div></a>
     <a href="orders" class="orders-tab"><div class="section"><ion-icon name="file-tray-stacked-outline"></ion-icon></div></a>
-    <a href="" ></a><div class="section"><ion-icon name="bag-handle-outline"></ion-icon></div>
+    <a href="inventory" ><div class="section"><ion-icon name="bag-handle-outline"></ion-icon></div></a>
     <a href="user-access" class="access-tab"><div class="section"> <ion-icon name="person-circle-outline"></ion-icon></div></a>
 
 </div>
