--- a/public/styles/access.css
+++ b/public/styles/access.css
@@ -150,6 +150,7 @@ button{
     font-size: 1em;
     margin-left: 5px;
     margin-bottom: 5px;
+    margin-top: 10px;
     cursor: pointer;
     background-color: rgb(224, 223, 223);
 }
