--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,10 @@
 <header>
     <div class="spacer">
-        <div class="logo item"></div>
+        <div class="logo item">
+            <span style="color: #3D8493;">P</span>
+            <span style="color: #D89F65;">O</span>
+            <span style="color: #4A5C2F;">S</span>
+        </div>
         <div class="search item">
             <input type="text" placeholder="Search Products...">
         </div>
