--- a/views/inventory.ejs
+++ b/views/inventory.ejs
@@ -21,7 +21,7 @@
 
     </div>
     <div class="down">
-    <div>
+    <div class="category">
         <span>Category:</span>
         <select>
             <option>All</option>
