--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,9 +5,9 @@
             <span style="color: #D89F65;">O</span>
             <span style="color: #4A5C2F;">S</span>
         </div>
-        <div class="search item">
+        <!-- <div class="search item">
             <input type="text" placeholder="Search Products...">
-        </div>
+        </div> -->
         <div class="account item"></div>
     </div>
 </header>
