--- a/public/styles/inventory.css
+++ b/public/styles/inventory.css
@@ -31,6 +31,13 @@ margin-left: 5%;
     align-items: center;
     margin-top: 30px;
 }
+
+.down > div{
+    border: solid;
+    display: flex;
+    flex-direction: row;
+    width: auto;
+}
 .parent input{
     height: 20px;
     width: 20px;
